--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,12 @@
       <a href="/" title="Return to CSE Motors home page">CSE Motors</a>
     </h1>
     <div id="tools">
-      <a title="Log in to your CSE Motors account" href="/accounts/login">My Account</a>
+     <% if (typeof loggedin !== 'undefined' && loggedin && typeof accountData !== 'undefined') { %>
+      <li><a href="/accounts/" title="Account Management">Welcome <%= accountData.account_firstname %></a></li>
+      <li><a href="/accounts/logout" title="Logout">Logout</a></li>
+    <% } else { %>
+      <li><a href="/accounts/" title="My Account">My Account</a></li>
+    <% } %>
     </div>
   </header>
 
