--- a/views/accounts/update-account.ejs
+++ b/views/accounts/update-account.ejs
@@ -18,7 +18,7 @@
   <!-- ===== Account Update Form ===== -->
   <section>
     <h2>Update Account Information</h2>
-    <form action="/accounts/update-info" method="POST">
+    <form action="/accounts/update" method="POST">
       <label for="account_firstname">First Name</label>
       <input type="text" id="account_firstname" name="account_firstname"
              value="<%= account_firstname || '' %>" required>
