--- a/views/accounts/management.ejs
+++ b/views/accounts/management.ejs
@@ -14,7 +14,7 @@
  </ul>
 <% } %>
 
-<h2>Welcome <%= accountData.account_firstname %></h2
+<h2>Welcome <%= accountData.account_firstname %></h2>
 
 <p>You're logged in</p>
 
