--- a/views/accounts/management.ejs
+++ b/views/accounts/management.ejs
@@ -34,6 +34,6 @@
 <!-- Admin-only account management -->
 <% if (account_type === "Admin") { %>
   <div class="button-group">
-    <a href="/accounts/view" class="btn">View Accounts</a>
+    <a href="/accounts/accountsView" class="btn">View Accounts</a>
   </div>
 <% } %>
