--- a/views/accounts/accountsView.ejs
+++ b/views/accounts/accountsView.ejs
@@ -1,34 +1,47 @@
+   <%- message %>
+
+<% if (errors) { %>
+  <ul class="notice">
+ <% errors.array().forEach(error => { %>
+   <li><%= error.msg %></li>
+<%  }) %>
+ </ul>
+<% } %>
+
 <% if (accounts.length > 0) { %>
-  <table id="accounts-table">
+  <div>
+    <input type="text" id="search" placeholder="Search by last name...">
+  </div>
+  <div>
+
+
+  </div>
+  <table>
     <thead>
       <tr>
         <th>First Name</th>
-        <th>
-          Last Name <br>
-          <input
-            type="text"
-            id="search"
-            placeholder="Search..."
-            style="width: 100%;"
-          />
-        </th>
+        <th>Last Name</th>
         <th>Email</th>
         <th>Type</th>
+        <th>Actions</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody id="accounts-table">
       <% accounts.forEach(account => { %>
         <tr>
-          <td><%= account.account_firstname %></td>
-          <td><%= account.account_lastname %></td>
-          <td><%= account.account_email %></td>
-          <td><%= account.account_type %></td>
+          <td><%= escape(account.account_firstname) %></td>
+          <td><%= escape(account.account_lastname) %></td>
+          <td><%= escape(account.account_email) %></td>
+          <td><%= escape(account.account_type) %></td>
+          <td>
+            <a href="/accounts/update/<%= account.account_id %>" class="btn">Edit</a>
+            <button onclick="deleteAccount('<%= account.account_id %>')" class="btn-delete">Delete</button>
+          </td>
         </tr>
       <% }) %>
     </tbody>
   </table>
-
-  <p id="account-count"><%= count %> accounts found</p>
+  <p id="account-count">Total accounts: <%= count %></p>
 <% } else { %>
   <p>No accounts found.</p>
 <% } %>
